--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,49 +168,11 @@ validation:
   absolute_links: warn
   unrecognized_links: warn
 
-# Material-Docs Theme
+# shadcn Theme
 theme:
-  name: material
-  custom_dir: docs/extra/overrides
-  logo: _static/imgs/ragas-logo.png
+  name: shadcn
+  icon: _static/imgs/ragas-logo.png
   favicon: _static/favicon.ico
-  features:
-    - announce.dismiss
-    - content.tabs.link
-    - content.code.annotate
-    - content.code.copy
-    - announce.dismiss
-    - navigation.tabs
-    - navigation.path
-    - navigation.instant
-    - navigation.instant.prefetch
-    - navigation.instant.preview
-    - navigation.sections
-    - navigation.top
-    - navigation.tracking
-    - navigation.indexes
-    - navigation.footer
-    - search.suggest
-    - search.highlight
-  palette:
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: "#bd8526"
-      accent: "#bd8526"
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: "#bd8526"
-      accent: "#bd8526"
-      toggle:
-        icon: material/brightness-4
-        name: Switch to system preference
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -249,8 +211,8 @@ extra:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
 plugins:
-  - social:
-      enabled: !ENV [MKDOCS_CI, true]
+  # - social:
+  #     enabled: !ENV [MKDOCS_CI, true]
   - search
   - git-revision-date-localized:
       enabled: !ENV [MKDOCS_CI, false]
