add: theme to install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,6 +172,7 @@ docs = [
     "mkdocs>=1.6.1",
     "mkdocs-material",
     "mkdocs-material[imaging]",
+    "mkdocs-shadcn",
     "mkdocstrings[python]",
     "mkdocs-glightbox",
     "mkdocs-autorefs",
